--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:18.0.0'
     implementation 'com.google.firebase:firebase-database:19.5.1'
     implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'com.firebaseui:firebase-ui-database:7.1.1'
     implementation 'com.github.rey5137:material:1.3.1'
 
     implementation'androidx.cardview:cardview:1.0.0'
@@ -59,5 +60,7 @@ dependencies {
     implementation 'io.paperdb:paperdb:2.7.1'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
