--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
 }
