--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ARShop"
         tools:replace="android:icon,android:theme">
-        <activity android:name=".OrderActivity"></activity>
+        <activity android:name=".AdminOrderProductsActivity"></activity>
+        <activity android:name=".AdminOrdersActivity" />
+        <activity android:name=".OrderActivity" />
         <activity android:name=".CartActivity" />
         <activity android:name=".ProductDetailsActivity" />
         <activity android:name=".SettingsGoogleActivity" />
