added reset password feature with email sending

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ARShop"
         tools:replace="android:icon,android:theme">
-        <activity android:name=".AdminEditProductsActivity"></activity>
-        <activity android:name=".UserHistoryProductsActivity" />
-        <activity android:name=".UserOrdersActivity" />
+        <activity android:name=".ResetPasswordActivity"></activity>
+        <activity android:name=".adminActivities.AdminEditProductsActivity" />
+        <activity android:name=".userActivities.UserHistoryProductsActivity" />
+        <activity android:name=".userActivities.UserOrdersActivity" />
         <activity android:name=".SearchProductsActivity" />
-        <activity android:name=".AdminOrderProductsActivity" />
-        <activity android:name=".AdminOrdersActivity" />
+        <activity android:name=".adminActivities.AdminOrderProductsActivity" />
+        <activity android:name=".adminActivities.AdminOrdersActivity" />
         <activity android:name=".OrderActivity" />
         <activity android:name=".CartActivity" />
         <activity android:name=".ProductDetailsActivity" />
@@ -32,8 +33,8 @@
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/Theme.ARShop.NoActionBar" />
-        <activity android:name=".AdminCategoryActivity" />
-        <activity android:name=".AdminAddNewProductActivity" />
+        <activity android:name=".adminActivities.AdminCategoryActivity" />
+        <activity android:name=".adminActivities.AdminAddNewProductActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
