--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,12 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the "MyLocation" functionality.
     -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:glEsVersion="0x00030000" android:required="true" />
+
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
     <uses-feature android:name="android.hardware.camera.ar" />
 
     <application
@@ -25,14 +25,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ARShop"
         tools:replace="android:icon,android:theme">
+        <activity android:name=".ARactivities.MakeUpActivity"></activity>
 
-        <meta-data
-            android:name="com.google.ar.core"
-            android:value="required" />
-
-        <activity android:name=".TryOnActivity"></activity>
-        <activity android:name=".WhislistActivity" />
-        <activity android:name=".AboutUsActivity" />
+        <activity android:name=".ARactivities.TryOnActivity" />
+        <activity android:name=".shopActivities.WhislistActivity" />
+        <activity android:name=".shopActivities.AboutUsActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -45,32 +42,32 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".ContactActivity" />
+        <activity android:name=".shopActivities.ContactActivity" />
         <activity android:name=".adminActivities.AdminUsersActivity" />
         <activity android:name=".adminActivities.AdminOrdersHistoryActivity" />
-        <activity android:name=".CategoryProductsActivity" />
-        <activity android:name=".CategoriesActivity" />
-        <activity android:name=".ResetPasswordActivity" />
+        <activity android:name=".shopActivities.CategoryProductsActivity" />
+        <activity android:name=".shopActivities.CategoriesActivity" />
+        <activity android:name=".shopActivities.ResetPasswordActivity" />
         <activity android:name=".adminActivities.AdminEditProductsActivity" />
         <activity android:name=".userActivities.UserHistoryProductsActivity" />
         <activity android:name=".userActivities.UserOrdersActivity" />
-        <activity android:name=".SearchProductsActivity" />
+        <activity android:name=".shopActivities.SearchProductsActivity" />
         <activity android:name=".adminActivities.AdminOrderProductsActivity" />
         <activity android:name=".adminActivities.AdminOrdersActivity" />
-        <activity android:name=".OrderActivity" />
-        <activity android:name=".CartActivity" />
-        <activity android:name=".ProductDetailsActivity" />
-        <activity android:name=".SettingsGoogleActivity" />
-        <activity android:name=".SettingsActivity" />
+        <activity android:name=".shopActivities.OrderActivity" />
+        <activity android:name=".shopActivities.CartActivity" />
+        <activity android:name=".shopActivities.ProductDetailsActivity" />
+        <activity android:name=".shopActivities.SettingsGoogleActivity" />
+        <activity android:name=".shopActivities.SettingsActivity" />
         <activity
-            android:name=".HomeActivity"
+            android:name=".shopActivities.HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/Theme.ARShop.NoActionBar" />
         <activity android:name=".adminActivities.AdminHomeActivity" />
         <activity android:name=".adminActivities.AdminAddNewProductActivity" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".shopActivities.RegisterActivity" />
+        <activity android:name=".shopActivities.LoginActivity" />
+        <activity android:name=".shopActivities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -80,6 +77,10 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
+
+        <meta-data
+            android:name="com.google.ar.core"
+            android:value="required" />
     </application>
 
 </manifest>
